Correct ARIA info, improve contrast & clarify link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,6 +246,7 @@ footer {
     background-color: #8E4E99;
     margin-left: 10px;
     border: solid 1px #57245E;
+    color: #fff;
 }
 
 .contact-btn:hover {
